<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2c2c">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="604dp"
        android:gravity="center_horizontal|top"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="151dp"
        android:layout_height="151dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="437dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        tools:ignore="MissingClass" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="388dp"
        android:gravity="center_horizontal|top"
        android:text="@string/jamal"
        android:textColor="#D9DDDC"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="152dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="367dp"
        android:gravity="center_horizontal|top"
        android:text="@string/denji"
        android:textColor="#D9DDDC"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="152dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="344dp"
        android:gravity="center_horizontal|top"
        android:text="@string/c_rien_c_la_rue"
        android:textColor="#88CCFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="152dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="328dp"
        android:gravity="center_horizontal|top"
        android:text="@string/rabat"
        android:textColor="#88CCFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="274dp"
        android:text="@string/memories"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />


</RelativeLayout>