<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2c2c"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/log_in_to_your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/fullname_hint_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name_signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/fullname_field_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fullname_field_signup"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/round_field"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname_hint_signup"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/username_hint_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username_signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/fullname_field_signup"
        app:layout_constraintTop_toBottomOf="@id/fullname_field_signup"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username_field_signup"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:background="@drawable/round_field"
        android:inputType="textShortMessage"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_hint_signup" />

    <TextView
        android:id="@+id/email_hint_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_address_hint"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/fullname_field_signup"
        app:layout_constraintTop_toBottomOf="@id/username_field_signup"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_field_signup"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/round_field"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_hint_signup" />

    <TextView
        android:id="@+id/phonenumber_hint_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number_signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/fullname_field_signup"
        app:layout_constraintTop_toBottomOf="@id/email_field_signup"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/phonenumber_field_signup"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="phone"
        android:background="@drawable/round_field"
        android:inputType="phone"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phonenumber_hint_signup" />

    <TextView
        android:id="@+id/password_hint_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint_signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/fullname_field_signup"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_field_signup"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_field_signup"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/round_field"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_hint_signup" />

    <TextView
        android:id="@+id/confirmpassword_hint_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/fullname_field_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_field_signup"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/confirmpassword_field_signup"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/round_field"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmpassword_hint_singup" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up_button_signup"
        android:backgroundTint="#88ccff"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmpassword_field_signup"
        />
    <TextView
        android:id="@+id/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/already_have_an_account_log_in"
        android:textAlignment="center"
        android:textColor="#88CCFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>